[gd_scene load_steps=5 format=3 uid="uid://bh4j6mauhkkkr"]

[ext_resource type="Theme" uid="uid://b5yrg7jpk4t0b" path="res://assets/themes/card/major_card.tres" id="1_p5pv8"]
[ext_resource type="Script" path="res://scripts/menu/card/card.gd" id="1_qgcjn"]
[ext_resource type="Texture2D" uid="uid://defthmt63w7wu" path="res://assets/texture/card/missing.png" id="2_ykinm"]

[sub_resource type="LabelSettings" id="LabelSettings_3rsgu"]
resource_local_to_scene = true
font_size = 24

[node name="CardRoot" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 220.0
offset_bottom = 362.0
theme = ExtResource("1_p5pv8")
script = ExtResource("1_qgcjn")

[node name="CardOffset" type="Control" parent="."]
anchors_preset = 0
offset_left = -110.0
offset_top = -181.0
offset_right = 111.0
offset_bottom = 181.0

[node name="CardPanel" type="PanelContainer" parent="CardOffset"]
layout_mode = 0
offset_right = 220.0
offset_bottom = 362.0

[node name="MarginContainer" type="MarginContainer" parent="CardOffset/CardPanel"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CardOffset/CardPanel/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="NamePanel" type="PanelContainer" parent="CardOffset/CardPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="NameLabel" type="Label" parent="CardOffset/CardPanel/MarginContainer/VBoxContainer/NamePanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
text = "No Name"
label_settings = SubResource("LabelSettings_3rsgu")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="CardImage" type="TextureRect" parent="CardOffset/CardPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 180)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_ykinm")
expand_mode = 1

[node name="DescriptionPanel" type="PanelContainer" parent="CardOffset/CardPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CardOffset/CardPanel/MarginContainer/VBoxContainer/DescriptionPanel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="DescriptionLabel" type="RichTextLabel" parent="CardOffset/CardPanel/MarginContainer/VBoxContainer/DescriptionPanel/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "No description."

[connection signal="gui_input" from="CardOffset/CardPanel" to="." method="_on_card_panel_gui_input"]
[connection signal="mouse_entered" from="CardOffset/CardPanel" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="CardOffset/CardPanel" to="." method="_on_panel_container_mouse_exited"]
